resources/pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
    lifecycle:
      preStop:
        exec:
          command: ["sleep", "30"]
