resources/pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  labels:          # Add this section
    app: nginx     # Matches the Service selector
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
